--- a/index.html
+++ b/index.html
@@ -227,7 +227,9 @@
 <section class="hero">
     <h3>Empower Women For a Viksit Bharat</h3>
     <p>A Commitment towards a Stronger and Empowered Nation.</p>
-    <p class="hero-quote">"I am a woman of strength, courage, and dreams. When society supports me, I help build a stronger nation."</p>
+    <p class="hero-quote">"As women of this nation, we stand with strength, dignity, and determination.
+We are committed to learning, leading, and contributing in every way we can.
+When we grow, our families grow — and our nation grows with us."</p>
     <h4 style="text-align: center;""> - Voice of the Visionary Woman</h4>
 </section>
 
