--- a/index.html
+++ b/index.html
@@ -227,9 +227,7 @@
 <section class="hero">
     <h3>Empower Women For a Viksit Bharat</h3>
     <p>A Commitment towards a Stronger and Empowered Nation.</p>
-    <p class="hero-quote">"As women of this nation, we stand with strength, dignity, and determination.
-We are committed to learning, leading, and contributing in every way we can.
-When we grow, our families grow — and our nation grows with us."</p>
+    <p class="hero-quote">"I AM A WOMAN OF STRENGTH , COURAGE ,AND DREAMS. WHEN SOCIETY SUPPORTS ME ,I HELP BUILD A STRONGER NATION"</p>
     <h4 style="text-align: center;""> - Voice of the Visionary Woman</h4>
 </section>
 
@@ -259,7 +257,9 @@ When we grow, our families grow — and our nation grows with us."</p>
 
             <div class="input-group">
                 <label>The Pledge</label>
-                <textarea id="pledgeText" rows="3" readonly style="background: #f9f9f9; font-style: italic;">"I pledge to uphold the dignity, safety and empowerment of women for a strong and developed India."</textarea>
+                <textarea id="pledgeText" rows="3" readonly style="background: #f9f9f9; font-style: italic;">"As women of this nation, we stand with strength, dignity, and determination.
+We are committed to learning, leading, and contributing in every way we can.
+When we grow, our families grow — and our nation grows with us."</textarea>
             </div>
 
             <button class="submit-btn" onclick="submitPledge()">Submit & Generate Certificate</button>
