--- a/index.html
+++ b/index.html
@@ -227,10 +227,10 @@
 <section class="hero">
     <h3>Empower Women For a Viksit Bharat</h3>
     <p>A Commitment towards a Stronger and Empowered Nation.</p>
-    <p class="hero-quote">"As women of this nation, we stand with strength, dignity, and determination.
+    <p class="hero-quote">As women of this nation, we stand with strength, dignity, and determination.
 We are committed to learning, leading, and contributing in every way we can.
-When we grow, our families grow — and our nation grows with us."</p>
-    <h4 style="text-align: center;""> - Voice of the empowered Woman</h4>
+When we grow, our families grow — and our nation grows with us <br>मैं एक मजबूत और विकसित भारत के लिए महिलाओं का सम्मान और सशक्तिकरण करने का संकल्प लेता/लेती हूँ।</p>
+    <h4 style="text-align: center;""> - Voice of Empowered Woman</h4>
 </section>
 
 <section class="registration-section" id="register">
