--- a/index.html
+++ b/index.html
@@ -356,8 +356,7 @@ function drawCertificate(name, gender) {
     ctx.font = "20px Inter";
     ctx.fillText("has taken a pledge to Empower Women for a Viksit Bharat.", c.width/2, 450);
 
-    const hindi = gender === "female" ? "मैं एक मजबूत और अधिक विकसित राष्ट्र के निर्माण के लिए ।" : "मैं एक मजबूत और अधिक विकसित राष्ट्र के निर्माण के लिए ।";
-    const hindi = gender === "female" ? "महिलाओं का सम्मान और सशक्तिकरण करने की प्रतिज्ञा करती हूँ।।" : "महिलाओं का सम्मान और सशक्तिकरण करने की प्रतिज्ञा करता हूँ।।";
+   const hindi = gender === "female" ? "मैं एक मजबूत और अधिक विकसित राष्ट्र के निर्माण के लिए महिलाओं का सम्मान और सशक्तिकरण करने की प्रतिज्ञा करती हूँ।।" : "मैं एक मजबूत और अधिक विकसित राष्ट्र के निर्माण के लिए महिलाओं का सम्मान और सशक्तिकरण करने की प्रतिज्ञा करता हूँ।।";
     ctx.font = "bold 24px Inter";
     ctx.fillStyle = "#000080";
     ctx.fillText(hindi, c.width/2, 510);
